--- a/ATVs-LIMA/Aula 00 - Site Pessoal/SITE1/Site Pessoal.css
+++ b/ATVs-LIMA/Aula 00 - Site Pessoal/SITE1/Site Pessoal.css
@@ -7,7 +7,7 @@
 
 /* Paleta */
 :root {
-  --cor-fundo: #1e1e1e;
+  --cor-fundo: #000000;
   --cor-texto: #ffffff;
   --cor-cartao: #f4f4f4;
   --cor-vermelho: #e63946;
