--- a/ATVs-LIMA/Aula 04/Nostalgia.css
+++ b/ATVs-LIMA/Aula 04/Nostalgia.css
@@ -81,5 +81,31 @@ html, body {
     padding: 0;
 }
 
+h3 {
+    color: #FFFF00;
+}
+
+.rodape {
+    background-color: antiquewhite;
+    height: 80px;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
+    gap: 5px; 
+}
+
+.rodape img {
+    height: 15px;
+    width: auto;
+}
+
+.rodape p {
+    margin: 0;
+    font-size: 14px;
+    font-family: Arial, sans-serif;
+    color: #333;
+    text-align: center;
+}
 
 
